--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,24 @@
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.egg-info/
-dist/
-build/
-.venv/
-venv/
-.env
+# PYTHON
+__PYCACHE__/
+*.PYC
+*.PYO
+*.PYD
+*.EGG-INFO/
+DIST/
+BUILD/
+.VENV/
+VENV/
+.ENV
 
 # IDE
-.vscode/
-.idea/
+.VSCODE/
+.IDEA/
 
 # OS
-.DS_Store
+.DS_STORE
 
-# TestWeave runtime artifacts
-.qa/
-report/
+# TESTWEAVE RUNTIME ARTIFACTS
+.QA/
+REPORT/
+EXAMPLES/
+docs/
